<resources>
    <string name="app_name">E-Crafts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_account">Account</string>
    <string name="hello_blank_fragment">your information</string>


    <string-array name="quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>


    <string name="user_name">Name</string>
    <string name="user_email">E-mail</string>
    <string name="user_phone">Phone Number</string>
    <string name="user_address">Address</string>
    <string name="user_password">Password</string>
    <string name="register">REGISTER</string>
    <string name="register_activity">Register</string>
    <string name="user_login">Log In</string>
    <string name="view_your_q_a"><![CDATA[VIEW YOUR Q&A]]></string>
    <string name="my_questions_answers"><![CDATA[My QUESTIONS & ANSWERS]]></string>
    <string name="Account_Activity">My Account</string>
    <string name="blank"> </string>
    <string name="Show_More">more</string>

</resources>
